--- a/04/desafio/index.html
+++ b/04/desafio/index.html
@@ -9,7 +9,7 @@ Use funções para:
 -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,8 +19,8 @@ Use funções para:
     <h1>Cadstro de Produtos</h1>
     <form action="produto.php" method="get">
         <div>
-            <label for="produto">Produto :</label>
-            <input type="text" name="produto" id="produto">
+            <label for="nome">Nome do Produto :</label>
+            <input type="text" name="nome" id="nome">
         </div>
         <div>
             <label for="preco">Preço :</label>
