--- a/04/desafio/index.html
+++ b/04/desafio/index.html
@@ -16,7 +16,7 @@ Use funções para:
     <title>Cadastro</title>
 </head>
 <body>
-    <h1>Cadstro de Produtos</h1>
+    <h1>Cadastro de Produtos</h1>
     <form action="produto.php" method="get">
         <div>
             <label for="nome">Produto :</label>
