--- a/04/desafio/index.html
+++ b/04/desafio/index.html
@@ -9,11 +9,11 @@ Use funções para:
 -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
+    <title>Cadastro de Produtos</title>
 </head>
 <body>
     <h1>Cadstro de Produtos</h1>
